--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,13 +1,15 @@
 version: '3.7'
 
 services:
-  web:
+  rest_api:
     networks:
-      - shop-local-network
-    build: .
+      shop-local-network:
+        aliases:
+          - rest_api
+    container_name: rest_api
+    build:
+      context: ../
     command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - ./:/shop/podrygomy
     ports:
       - 8000:8000
     env_file:
@@ -17,6 +19,9 @@ services:
   db:
     networks:
       - shop-local-network
+    container_name: postgres_db
+    ports:
+      - 15432:5432
     image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/shop/postgresql/data/
